# classSOC-v2

./: README.md
slack-notifier/: .env.example  .gitignore  README.md  pyproject.toml
slack-notifier/slack_notifier/: __init__.py
ucla-monitor/: README.md  monitor.py
